# OpenC2X-standalone

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Documentation.html  README  README.txt  Readme  Readme.txt  TODO  Tag  bintray-descriptor.json  bumpVersion.py  compileAll.sh  listenToAlix.sh  runAll.sh  runAllNonClosing.sh  runAllScreen.sh  screenConfig
DocumentationSnapshot/: ChannelProber_8cpp.html  ChannelProber_8cpp.js  ChannelProber_8cpp__incl.map  ChannelProber_8cpp__incl.md5  ChannelProber_8h.html  ChannelProber_8h__dep__incl.map  ChannelProber_8h__dep__incl.md5  ChannelProber_8h__incl.map  ChannelProber_8h__incl.md5  ChannelProber_8h_source.html  CommunicationClient_8cpp.html  CommunicationClient_8cpp__incl.map  CommunicationClient_8cpp__incl.md5  CommunicationClient_8h.html  CommunicationClient_8h__dep__incl.map  CommunicationClient_8h__dep__incl.md5  CommunicationClient_8h__incl.map  CommunicationClient_8h__incl.md5  CommunicationClient_8h_source.html  CommunicationReceiver_8cpp.html  CommunicationReceiver_8cpp__incl.map  CommunicationReceiver_8cpp__incl.md5  CommunicationReceiver_8h.html  CommunicationReceiver_8h__dep__incl.map  CommunicationReceiver_8h__dep__incl.md5  CommunicationReceiver_8h__incl.map  CommunicationReceiver_8h__incl.md5  CommunicationReceiver_8h_source.html  CommunicationSender_8cpp.html  CommunicationSender_8cpp__incl.map  CommunicationSender_8cpp__incl.md5  CommunicationSender_8h.html  CommunicationSender_8h__dep__incl.map  CommunicationSender_8h__dep__incl.md5  CommunicationSender_8h__incl.map  CommunicationSender_8h__incl.md5  CommunicationSender_8h_source.html  CommunicationServer_8cpp.html  CommunicationServer_8cpp__incl.map  CommunicationServer_8cpp__incl.md5  (+1153 more)
cam/: .cproject  .project
cam/src/: CMakeLists.txt  cam.cpp  cam.h  caservice.cpp  caservice.h  config.xml  main.cpp
channelprober/: .cproject  .project
common/: .cproject  .project  CMakeLists.txt
common/.externalToolBuilders/: build_protobuffers.launch  compile_asn.launch
common/asn1/: AccelerationConfidence.c  AccelerationConfidence.h  AccelerationControl.c  AccelerationControl.h  AccidentSubCauseCode.c  AccidentSubCauseCode.h  ActionID.c  ActionID.h  AdverseWeatherCondition-AdhesionSubCauseCode.c  AdverseWeatherCondition-AdhesionSubCauseCode.h  AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.c  AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.h  AdverseWeatherCondition-PrecipitationSubCauseCode.c  AdverseWeatherCondition-PrecipitationSubCauseCode.h  AdverseWeatherCondition-VisibilitySubCauseCode.c  AdverseWeatherCondition-VisibilitySubCauseCode.h  AlacarteContainer.c  AlacarteContainer.h  Altitude.c  Altitude.h  AltitudeConfidence.c  AltitudeConfidence.h  AltitudeValue.c  AltitudeValue.h  BasicContainer.c  BasicContainer.h  BasicVehicleContainerHighFrequency.c  BasicVehicleContainerHighFrequency.h  BasicVehicleContainerLowFrequency.c  BasicVehicleContainerLowFrequency.h  CAM.c  CAM.h  CMakeLists.txt  CamParameters.c  CamParameters.h  CauseCode.c  CauseCode.h  CauseCodeType.c  CauseCodeType.h  CenDsrcTollingZone.c  (+287 more)
common/buffers/: BasicContainer.proto  BasicVehicleHighFreqContainer.proto  BasicVehicleLowFreqContainer.proto  CMakeLists.txt  CamParameters.proto  CoopAwareness.proto  DENMManagementContainer.proto  DENMessage.proto  HighFreqContainer.proto  ItsPduHeader.proto  LowFreqContainer.proto  PathPoint.proto  ProtectedCommunicationZone.proto  RsuHighFreqContainer.proto  SpecialVehicleContainer.proto  cam.proto  camInfo.proto  data.proto  dccInfo.proto  denm.proto  generate.sh  gps.proto  ldmData.proto  obd2.proto  trigger.proto  wrapper.proto
common/config/: config.h  config.xml
common/messages/: CMakeLists.txt  MessageUtils.cpp  MessageUtils.h
common/utility/: CMakeLists.txt  Communication.cpp  Communication.h  CommunicationClient.cpp  CommunicationClient.h  CommunicationReceiver.cpp  CommunicationReceiver.h  CommunicationSender.cpp  CommunicationSender.h  CommunicationServer.cpp  CommunicationServer.h  Constants.h  GpsDataReceiver.cpp  GpsDataReceiver.h  GpsDataSender.cpp  GpsDataSender.h  ICommunication.h  LoggingUtility.cpp  LoggingUtility.h  Utils.cpp  Utils.h  zhelpers.hpp
config/: CMakeLists.txt  openc2x  openc2x_cam  openc2x_common  openc2x_dcc  openc2x_default  openc2x_denm  openc2x_gps  openc2x_httpServer  openc2x_ldm  openc2x_obd2
dcc/: .cproject  .project
dcc/src/: CMakeLists.txt  ChannelProber.cpp  ChannelProber.h  DccConfig.h  GeoNetHeaders.h  LeakyBucket.h  PktStatsCollector.cpp  PktStatsCollector.h  ReceiveFromHardwareViaIP.cpp  ReceiveFromHardwareViaIP.h  ReceiveFromHardwareViaMAC.cpp  ReceiveFromHardwareViaMAC.h  RecieveFromHarwareViaIP.cpp  RecieveFromHarwareViaIP.h  RingBuffer.h  SendToHardwareViaIP.cpp  SendToHardwareViaIP.h  SendToHardwareViaMAC.cpp  SendToHardwareViaMAC.h  State.h  config.xml  dcc.cpp  dcc.h  main.cpp
denm/: .cproject  .project
denm/src/: CMakeLists.txt  denm.cpp  denm.h  denservice.cpp  denservice.h
denmApp/: .cproject  .project
denmApp/src/: CMakeLists.txt  denmApp.cpp  denmApp.h
documentation/: documentation.doxyfile  genDocumentation.sh
gps/: .cproject  .project  CMakeLists.txt
gps/src/: CMakeLists.txt  GpsService.cpp  GpsService.h
httpServer/: .cproject  .project  ssh-tunnel
httpServer/src/: CMakeLists.txt  Server.cpp  Server.h  httpServer.cpp  httpServer.h
kernel-patches/: 0001-Enable-queueing-in-all-4-ACs-BE-BK-VI-VO.patch  999-Get-hw-queue-pending-stats-from-ath9k-via-netlink.patch  README.txt
ldm/: .cproject  .project
ldm/src/: CMakeLists.txt  ldm.cpp  ldm.h
ldmFrontend/: .project  JSONtoTableTest.html  index.html  stylesheet.css
ldmWebApplication/: .cproject  .project
ldmWebSite/: .project  .tern-project  index.html  stylesheet.css
ldm_frontend/: .project  stylesheet.css
ldm_web_application/: .cproject  .project  ssh-tunnel
lib/: msgs.proto
logs/: frac.R  log_interleaver.py
obd2/: .cproject  .project
obd2/src/: CMakeLists.txt  Obd2Service.cpp  Obd2Service.h  SerialPort.cpp  SerialPort.h  config.xml
scripts/: CMakeLists.txt  logMem.sh  (+23 more)
(+229 files in other folders)
